# image_editor

./: LICENSE  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/kotlin/com/image/editor/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/constants/: filter_list.dart  filter_type_enum.dart
lib/pages/: home_page.dart
lib/providers/: image_preview_provider.dart
lib/services/: native_library_service.dart  phyton_filter_service.dart
lib/utils/: filter_apply_functions.dart
lib/widgets/: image_filter_list.dart  image_history_buttons.dart  image_preview_widget.dart
open_cv/: image_editor.cpp
phyton_api/: app.py
